# django-users-permission-system

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  admin.py  apps.py  conf.py  context_processors.py  dashboard.py  dashboard_views.py  middleware.py  models.py  pyproject.toml  role_permissions.py  sync.py  test_dashboard.py  test_platforms.py  test_settings.py  test_urls.py  tests.py  url_permissions.py  urls.py  views.py
docs/: api.md  architecture.md  index.md  installation.md  platforms.md  plugins.md  roles.md
migrations/: 0001_initial.py  0002_appmodule_external_api_url_appmodule_icon_file_and_more.py  0003_appmodule_url_name.py  0004_appmodule_show_in_home.py  0005_appmodule_is_active.py  0006_alter_appmodule_icon_file.py  0007_appmodule_created_at_appmodule_redirect_url_and_more.py  0008_externalsyncendpoint.py  0009_appmodule_base_url.py  0010_alter_externalsyncendpoint_event_type.py  0011_reports_cdr_permissions.py  0012_fiu_dashboard_permissions.py  0013_platform_adapters.py  0014_role_slug_description.py
plugins/: __init__.py  base.py  registry.py
static/userspermissionsystem/css/: dashboard.css
static/userspermissionsystem/js/: dashboard.js
templates/userspermissionsystem/: dashboard.html  documentation.html
