[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-users-permission-system"
version = "0.3.0"
description = "Django URL-based RBAC with pluggable modules and multi-platform user sync"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nitesh", email = "nkscoder@users.noreply.github.com" }]
keywords = ["django", "rbac", "permissions", "gitlab", "github", "pypi"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django>=4.2",
    "django-import-export>=3.3",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/nkscoder/django-users-permission-system"
Repository = "https://github.com/nkscoder/django-users-permission-system"
Documentation = "https://github.com/nkscoder/django-users-permission-system#readme"
Issues = "https://github.com/nkscoder/django-users-permission-system/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-django"]

[project.entry-points."userspermissionsystem.platforms"]
# Host projects can register custom adapters:
# myplatform = myapp.adapters.MyPlatformAdapter

[tool.setuptools]
package-dir = {"userspermissionsystem" = "."}
packages = [
    "userspermissionsystem",
    "userspermissionsystem.migrations",
    "userspermissionsystem.plugins",
    "userspermissionsystem.platforms",
]

[tool.setuptools.package-data]
userspermissionsystem = [
    "migrations/*.py",
    "templates/**/*",
    "static/**/*",
    "docs/**/*",
]

[tool.setuptools.exclude-package-data]
userspermissionsystem = [
    "test_*.py",
    "tests.py",
    "test_settings.py",
    "test_urls.py",
]
